# academ.ai

./: .env  .pre-commit-config.yaml  Dockerfile.academ_ai  Dockerfile.serve_app  README.md  docker-compose.yaml  pyproject.toml
app/: app.py
app/static/: index.html  script.js  styles.css  titleRegex.js
blog-post/: blog-post.md
data/: papers_test.db
src/: db.py  retrieve.py
src/academ_ai/: __init__.py  api.py  app.py  build_rag_db.py  config.py  db.py  retrieve.py
src/academ_ai/retrievers/: __init__.py  arxiv_helpers.py  biorxiv_medrxiv.py
src/academ_ai/static/: index.html  script.js  styles.css
src/retrievers/: arxiv.py
