[project]
name = "academ_ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=23.3.0",
    "fastapi>=0.116.1",
    "flake8>=6.0.0",
    "huggingface>=0.0.1",
    "mypy>=1.3.0",
    "nltk>=3.8.1",
    "numpy>=1.24.3",
    "protobuf>=4.25.2,<6.0.0",
    "pydantic>=2.0.0",
    "pytest>=7.4.0",
    "requests>=2.32.4",
    "sentence-transformers>=2.2.2",
    "tqdm>=4.66.1",
    "uvicorn>=0.35.0",
    "weaviate>=0.1.2",
    "weaviate-client>=3.22.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/academ_ai"]

[project.scripts]
academ_ai_retrieve = "academ_ai.retrieve:main"
academ_ai_build = "academ_ai.build_rag_db:main"
academ_ai_api = "academ_ai.api:main"
academ_ai_serve = "academ_ai.app:main"

[project.optional-dependencies]
serve = [
    "flask>=3.1.1",
]
